<resources>
    <string name="app_name">2tME</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="createAccount">Create an Account</string>
    <string name="login">Log in</string>
    <string name="alreadyAccount">Already have an account</string>
    <string name="forgetPassword">Forget password</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="dontDeleteAccount">Dont delete Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>